--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "composite": false,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "tsBuildInfoFile": "./tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
+    "incremental": true,
     "skipLibCheck": true,
 
     /* Bundler mode */
